--- a/board_game_website/games/templates/base.html
+++ b/board_game_website/games/templates/base.html
@@ -1,6 +1,15 @@
 <p>
     <a href="{% url 'board_game_website:index' %}">Home</a>
     <a href="{% url 'board_game_website:games' %}">Games</a>
+    <a href="{% url 'users:register' %}">Register</a> 
+
+
+{% if user.is_authenticated %}
+Hello, {{user.username}}
+<a href="{% url 'users:logout' %}">logout</a>
+{%else%}
+<a href="{% url 'users:login' %}">login</a>
+{% endif %}
 </p>
 
 
