--- a/board_game_website/games/templates/games.html
+++ b/board_game_website/games/templates/games.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
+
 {% block content %}
-<h1>Games</h1>
-<ul>
-{% for games in games %}
-<li>Game: {{ games.name }} </li>
-<p>Reservation: {{ games.reservation }} </p>
-{% empty %}
-<li>No games have been added yet.</li>
-{% endfor %}
-</ul>
+
+    <h1>Games</h1>
+    <ul>
+    {% for games in games %}
+    <li>Game: {{ games.name }} </li>
+    <p>Reservation: {{ games.reservation }} </p>
+    {% empty %}
+    <li>No games have been added yet.</li>
+    {% endfor %}
+    </ul>
+
+    <a href="{% 'url board_game_website:new_game' %}">
+        
 {% endblock content %}
