--- a/board_game_website/games/templates/new_game.html
+++ b/board_game_website/games/templates/new_game.html
@@ -7,7 +7,7 @@
     <form action="{% url 'crazy_book_clubs: new_book' %}" method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-        <button name="submit">Add book</button>
+        <button name="submit">Add game</button>
     </form>
     
 {% endblock content %}
