--- a/board_game_website/games/templates/base.html
+++ b/board_game_website/games/templates/base.html
@@ -2,6 +2,9 @@
     <a href="{% url 'board_game_website:index' %}">Home</a>
     <a href="{% url 'board_game_website:games' %}">Games</a>
     <a href="{% url 'users:register' %}">Register</a> 
+    <a href="{% url 'board_game_website:new_game' %}">Add game</a>
+    <a href="{% url 'board_game_website:reviews' %}">Reviews</a>
+    
 
 
 {% if user.is_authenticated %}
