--- a/board_game_website/games/templates/new_game.html
+++ b/board_game_website/games/templates/new_game.html
@@ -1,10 +1,10 @@
-{% extends "board_game_website/base.html" %}
+{% extends "base.html" %}
 
 
 {% block content %}
     <p>Add a new book:</p>
 
-    <form action="{% url 'board_game_website: new_game' %}" method='post'>
+    <form action="{% url 'board_game_website:new_game' %}" method='post'>
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">Add game</button>
