--- a/board_game_website/games/templates/index.html
+++ b/board_game_website/games/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h1>Welcome to Board gamers website!</h1>
+<p>Here you can make and see reservations of different board games and also make reviews for them.</p>
 
 </body>
 {% endblock content %}
